[survey:tpl] Integration of survey landing page

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title><%= pageTitle %></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <header>
