[global:css] Add fonts Helvetica and Lato

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <title><%= pageTitle %></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Lato:300,400,700" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
