--- a/public/scss/fonts.scss
+++ b/public/scss/fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
 	font-family: 'Helvetica';
-	src: url('fonts/hinted-HelveticaNeueLTCom-Bd.eot');
+	src: url('../fonts/hinted-HelveticaNeueLTCom-Bd.eot');
 	src: local('Helvetica Neue LT Com 75 Bold'), local('HelveticaNeueLTCom-Bd'),
-		url('fonts/hinted-HelveticaNeueLTCom-Bd.eot?#iefix') format('embedded-opentype'),
-		url('fonts/hinted-HelveticaNeueLTCom-Bd.woff2') format('woff2'),
-		url('fonts/hinted-HelveticaNeueLTCom-Bd.woff') format('woff'),
-		url('fonts/hinted-HelveticaNeueLTCom-Bd.ttf') format('truetype');
+		url('../fonts/hinted-HelveticaNeueLTCom-Bd.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/hinted-HelveticaNeueLTCom-Bd.woff2') format('woff2'),
+		url('../fonts/hinted-HelveticaNeueLTCom-Bd.woff') format('woff'),
+		url('../fonts/hinted-HelveticaNeueLTCom-Bd.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Helvetica';
-	src: url('fonts/hinted-HelveticaNeueLTCom-Roman.eot');
+	src: url('../fonts/hinted-HelveticaNeueLTCom-Roman.eot');
 	src: local('Helvetica Neue LT Com 55 Roman'), local('HelveticaNeueLTCom-Roman'),
-		url('fonts/hinted-HelveticaNeueLTCom-Roman.eot?#iefix') format('embedded-opentype'),
-		url('fonts/hinted-HelveticaNeueLTCom-Roman.woff2') format('woff2'),
-		url('fonts/hinted-HelveticaNeueLTCom-Roman.woff') format('woff'),
-		url('fonts/hinted-HelveticaNeueLTCom-Roman.ttf') format('truetype');
+		url('../fonts/hinted-HelveticaNeueLTCom-Roman.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/hinted-HelveticaNeueLTCom-Roman.woff2') format('woff2'),
+		url('../fonts/hinted-HelveticaNeueLTCom-Roman.woff') format('woff'),
+		url('../fonts/hinted-HelveticaNeueLTCom-Roman.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
