--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -5,6 +5,7 @@
         <title><%= pageTitle %></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Lato:300,400,700" rel="stylesheet">
+        <script defer src="js/bundle.js"></script>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
