--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -1,73 +1,115 @@
 .survey {
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  background-color: white;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items:center;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
 
   .survey__header, .survey__footer {
-    max-width: 95%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
-  .survey__logo {
-    height: 100px;
-    width: 90%;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    background-image: url('../img/logo-improve--black.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
+  .survey__header {
+    .survey__logo {
+      height: 15vh;
+      width: 100%;
+      margin-bottom: 10px;
+      margin-top: 10px;
+      background-image: url('../img/logo-improve--black.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size:contain;
+    }
 
-  .survey__question {
-    margin-bottom: 10px;
-    font-family: "Helvetica", sans-serif;
-    font-size: 36px;
-    font-weight: bold;
-  }
+    .survey__question {
+      height: 60%;
+      margin-bottom: 10px;
+      font-family: "Helvetica", sans-serif;
+      font-size: 1.75rem;
+      font-weight: bold;
+    }
 
-  .survey__question__description {
-    font-family: "Lato", Arial, sans-serif;
-    font-size: 16px;
-  }
+    .survey__question__description {
+      font-family: "Lato", Arial, sans-serif;
+      font-size: 1rem;
+    }
 
-  .survey__skip {
-    height: auto;
-    display: flex;
-    align-self: flex-end;
-    justify-content: center;
-    align-items: center;
-    padding-left: 16px;
-    margin-top:10px;
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-    font-family: "Lato", Arial, sans-serif;
+    .survey__skip {
+      height: auto;
+      display: flex;
+      align-self: flex-end;
+      justify-content: center;
+      align-items: center;
+      padding-left: 16px;
+      margin-top: 10px;
+      background-color: black;
+      color: white;
+      border-radius: 5px;
+      font-family: "Lato", Arial, sans-serif;
 
-    .survey__skip__icon {
-      color:white;
-      font-size: 36px;
+      .survey__skip__icon {
+        color:white;
+        font-size: 36px;
+      }
     }
   }
 
-  .survey__validate {
-    height: 120px;
-    width: 120px;
-    position:absolute;
-    bottom:-25px;
-    background-color: black;
-    border-radius: 50%;
-    color: white;
+  .survey__body {
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-family: "Lato", Arial, sans-serif;
+    flex-grow: 2;
 
-    .survey__validate__icon {
-      font-size: 48px;
+    .survey__age .age__input:first-child, .survey__age .age__input:last-child {
+      font-size: 1.5rem;
+      opacity: 0.5;
+    }
+
+    .survey__age .age__input {
+      text-align: center;
+      transition: all 0.1s linear;
+      font-size: 2rem;
+      opacity: 0.75;
+    }
+
+    .survey__age .age__input--selected {
+      font-size: 3rem;
+      font-weight: bold;
+      opacity: 1;
+    }
+
+    .survey__age__unit {
+      width: 0;
+      align-self: center;
+      margin-left: 10px;
+      font-size: 3rem;
+      font-weight: bold;
+    }
+  }
+
+  .survey__footer {
+    height:20vh;
+    .survey__validate {
+      height: 20vh;
+      width: 20vh;
+      background-color: black;
+      border-radius: 50%;
+      color: white;
+      position: absolute;
+      bottom:-4vh;
+
+      .survey__validate__icon {
+        font-size: 3rem;
+      }
     }
   }
 }
