[survey:tpl] Fix survey home responsive and remane page

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -10,7 +10,8 @@
       Passer le formulaire <i class="material-icons survey__skip__icon">keyboard_arrow_right</i>
     </button>
   </header>
-
+  <section class="survey__body">
+  </section>
   <footer class='survey__footer'>
     <button class='survey__validate'>
       <i class="material-icons survey__validate__icon">done</i>
