[survey:tpl] Update question 1 (age) tpl input unit

--- a/app/views/pages/age.ejs
+++ b/app/views/pages/age.ejs
@@ -6,7 +6,7 @@
   <section class="survey__body">
     <div class="survey__age">
     </div>
-    <div class="survey__age__unit">ans</div>
+    <div class="survey__unit survey__unit--age">ans</div>
   </section>
   <footer class='survey__footer'>
     <button class='survey__validate'>
