--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -87,11 +87,19 @@
       opacity: 1;
     }
 
-    .survey__age__unit {
+    .survey__unit {
       width: 0;
       align-self: center;
       margin-left: 10px;
+    }
+
+    .survey__unit--age {
       font-size: 3rem;
+      font-weight: bold;
+    }
+
+    .survey__unit--height {
+      font-size: 2rem;
       font-weight: bold;
     }
   }
