[survey:scss] Update scss for question 2 (height)

--- a/app/views/pages/height.ejs
+++ b/app/views/pages/height.ejs
@@ -4,8 +4,8 @@
     <h2 class='survey__question'>Quel est votre taille ?</h2>
   </header>
   <section class="survey__body">
-    <div class="survey__height">
-    </div>
+    <div class="survey__unit__indicator"></div>
+    <div class="survey__height"></div>
     <div class="survey__unit survey__unit--height">cm</div>
   </section>
   <footer class='survey__footer'>
