--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -69,6 +69,10 @@
     font-family: "Lato", Arial, sans-serif;
     flex-grow: 2;
 
+    /**
+      SURVEY AGE
+    */
+
     .survey__age .age__input:first-child, .survey__age .age__input:last-child {
       font-size: 1.5rem;
       opacity: 0.5;
@@ -98,9 +102,45 @@
       font-weight: bold;
     }
 
+    /**
+      SURVEY HEIGHT
+    */
+
     .survey__unit--height {
-      font-size: 2rem;
+      font-size: 1.25rem;
       font-weight: bold;
+    }
+
+    .survey__unit__indicator {
+      width: 20%;
+      height: 0.5vh;
+      background-color: #50e3c2;
+      position: fixed;
+      transform: translateX(-100%);
+    }
+
+    .survey__height {
+      .height__input {
+        text-align: center;
+        transition: all 0.1s linear;
+        font-size: 1.25rem;
+        opacity: 0.75;
+        line-height: 1.1;
+      }
+
+      .height__input:first-child, .height__input:last-child {
+        opacity: 0.25;
+      }
+
+      .height__input:nth-child(2), .height__input:nth-child(3), .height__input:nth-last-child(2),  .height__input:nth-last-child(3) {
+        opacity: 0.5;
+      }
+
+      .height__input--selected {
+        font-size: 1.25rem;
+        opacity: 1;
+        font-weight: bold;
+      }
     }
   }
 
