[survey:tpl] Update question 3 tpl

--- a/app/views/pages/weight.ejs
+++ b/app/views/pages/weight.ejs
@@ -4,8 +4,8 @@
     <h2 class='survey__question'>Quel est votre poids ?</h2>
   </header>
   <section class="survey__body">
-    <div class="survey__unit survey__unit--wheight"><span>kg</span></div>
-    <div class="survey__weight"></div>
+      <div class="survey__weight__display"><span></span><span class="survey__unit survey__unit--weight">kg</span></div>
+      <div class="survey__weight"></div>
   </section>
   <footer class='survey__footer'>
     <button class='survey__validate'>
