--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -1,20 +1,45 @@
 <section class='survey'>
-  <header class='survey__header'>
-    <div class='survey__logo'></div>
-    <h2 class='survey__question'>Avant tout, quelques questions...</h2>
-    <div class='survey__question__description'>
-      Nous allons vous soumettre quelques questions afin de personaliser au mieux
-      votre expérience. N'hésitez pas à lire nos CGU à cette adresse.
-    </div>
-    <button class="survey__skip">
-      Passer le formulaire <i class="material-icons survey__skip__icon">keyboard_arrow_right</i>
-    </button>
-  </header>
-  <section class="survey__body">
+  <section class='survey__introduction'>
+    <h2 class='survey__introductionTitle'>Dites nous en un peu plus à votre sujet</h2>
+    <p class='survey__introductionDescription'>
+      En répondant aux quelques questions de ce questionnaire, nous serons capable d'avoir une idée plus précise sur vos attentes.
+      Ainsi nous pourrons vous proposez le meilleur pour vous aider à vous améliorer.
+    </p>
   </section>
-  <footer class='survey__footer'>
-    <button class='survey__validate'>
-      <i class="material-icons survey__validate__icon">done</i>
+
+  <article class='survey__question'>
+    <h2 class='survey__questionTitle'>Commençons par une question simple, quel est votre âge ?</h2>
+    <section class='survey__questionAnswer'>
+      <div class='survey__questionAnswerInputs'></div>
+      <div class="survey__questionAnswerUnit survey__questionAnswerUnit--age">ans</div>
+    </section>
+    <button class='survey__questionValidation'>
+      <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
-  </footer>
+  </article>
+
+  <article class='survey__question'>
+    <h2 class='survey__questionTitle'>Quel est votre taille ?</h2>
+    <section class='survey__questionAnswer'>
+      <div class='survey__questionAnswerPointer'>
+      <div class='survey__questionAnswerInputs'></div>
+      <div class="survey__questionAnswerUnit survey__questionAnswerUnit--height">cm</div>
+    </section>
+    <button class='survey__questionValidation'>
+      <i class="material-icons survey__questionValidationIcon">done</i>
+    </button>
+  </article>
+
+  <article class='survey__question'>
+    <h2 class='survey__questionTitle'>Quel est votre poids ?</h2>
+    <section class='survey__questionAnswer'>
+      <div class='survey__questionAnswerDisplay'>
+        <span class="survey__questionAnswerUnit survey__questionAnswerUnit--weight">kg</span>
+      </div>
+      <div class='survey__questionAnswerInputs'></div>
+    </section>
+    <button class='survey__questionValidation'>
+      <i class="material-icons survey__questionValidationIcon">done</i>
+    </button>
+  </article>
 </section>
