[survey:tpl] Redo BEM for survey questions

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -7,34 +7,35 @@
     </p>
   </section>
 
-  <article class='survey__question'>
+  <article class='survey__question survey__question--age'>
     <h2 class='survey__questionTitle'>Commençons par une question simple, quel est votre âge ?</h2>
     <section class='survey__questionAnswer'>
       <div class='survey__questionAnswerInputs'></div>
-      <div class="survey__questionAnswerUnit survey__questionAnswerUnit--age">ans</div>
+      <div class='survey__questionAnswerUnit'>ans</div>
     </section>
     <button class='survey__questionValidation'>
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
 
-  <article class='survey__question'>
+  <article class='survey__question survey__question--height'>
     <h2 class='survey__questionTitle'>Quel est votre taille ?</h2>
     <section class='survey__questionAnswer'>
       <div class='survey__questionAnswerPointer'>
       <div class='survey__questionAnswerInputs'></div>
-      <div class="survey__questionAnswerUnit survey__questionAnswerUnit--height">cm</div>
+      <div class='survey__questionAnswerUnit'>cm</div>
     </section>
     <button class='survey__questionValidation'>
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
 
-  <article class='survey__question'>
+  <article class='survey__question survey__question--weight'>
     <h2 class='survey__questionTitle'>Quel est votre poids ?</h2>
     <section class='survey__questionAnswer'>
       <div class='survey__questionAnswerDisplay'>
-        <span class="survey__questionAnswerUnit survey__questionAnswerUnit--weight">kg</span>
+        <span></span>
+        <span class='survey__questionAnswerUnit'>kg</span>
       </div>
       <div class='survey__questionAnswerInputs'></div>
     </section>
