[survey:tpl] Update height pointer

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -21,7 +21,7 @@
   <article class='survey__question survey__question--height'>
     <h2 class='survey__questionTitle'>Quel est votre taille ?</h2>
     <section class='survey__questionAnswer'>
-      <div class='survey__questionAnswerPointer'>
+      <div class='survey__questionAnswerPointer'><hr></div>
       <div class='survey__questionAnswerInputs'></div>
       <div class='survey__questionAnswerUnit'>cm</div>
     </section>
