[global:sass] Fix helvetica font name

--- a/public/scss/fonts.scss
+++ b/public/scss/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: 'Helvetica';
+	font-family: 'Helvetica neue';
 	src: url('../fonts/hinted-HelveticaNeueLTCom-Bd.eot');
 	src: local('Helvetica Neue LT Com 75 Bold'), local('HelveticaNeueLTCom-Bd'),
 		url('../fonts/hinted-HelveticaNeueLTCom-Bd.eot?#iefix') format('embedded-opentype'),
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-	font-family: 'Helvetica';
+	font-family: 'Helvetica neue';
 	src: url('../fonts/hinted-HelveticaNeueLTCom-Roman.eot');
 	src: local('Helvetica Neue LT Com 55 Roman'), local('HelveticaNeueLTCom-Roman'),
 		url('../fonts/hinted-HelveticaNeueLTCom-Roman.eot?#iefix') format('embedded-opentype'),
