--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title><%= pageTitle %></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Lato:300,400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Source+Sans+Pro:400,600,700" rel="stylesheet">
         <script defer src="/js/bundle.js"></script>
         <link rel="stylesheet" href="/css/main.css">
     </head>
