--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -16,18 +16,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
 
+.survey__introductionTitle {
+  font-family: "Helvetica", sans-serif;
+  font-size: 1.75rem;
+  font-weight: bold;
+}
 
-  .survey__introductionTitle {
-    font-family: "Helvetica", sans-serif;
-    font-size: 1.75rem;
-    font-weight: bold;
-  }
-
-  .survey__introductionDescription {
-    margin: 1rem 0;
-    font-size: 1rem;
-  }
+.survey__introductionDescription {
+  margin: 1rem 0;
+  font-size: 1rem;
 }
 
 .survey__question {
@@ -38,39 +37,41 @@
   justify-content: center;
   align-items: flex-start;
   overflow: hidden;
+}
 
-  .survey__questionTitle {
-    flex:1;
-    display: flex;
-    align-items: center;
-    font-family: "Helvetica", sans-serif;
-    font-size: 1.75rem;
-    font-weight: bold;
-  }
+.survey__questionTitle {
+  flex:1;
+  display: flex;
+  align-items: center;
+  font-family: "Helvetica", sans-serif;
+  font-size: 1.75rem;
+  font-weight: bold;
 
-  .survey__questionTitle::before {
+  &::before {
     width:2rem;
     content: '';
     margin-right: 1rem;
     border: 2px solid #50e3c2;
   }
-
-  .survey__questionValidation {
-    height: 19vh;
-    width: 19vh;
-    align-self: center;
-    position: relative;
-    bottom: -3vh;
-    background-color: #50e3c2;
-    border-radius: 50%;
-    color: white;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  }
-
-  .survey__questionValidationIcon {
-    font-size: 3rem;
-  }
 }
+
+
+.survey__questionValidation {
+  height: 19vh;
+  width: 19vh;
+  align-self: center;
+  position: relative;
+  bottom: -3vh;
+  background-color: #50e3c2;
+  border-radius: 50%;
+  color: white;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.survey__questionValidationIcon {
+  font-size: 3rem;
+}
+
 
 .survey__questionAnswer {
   flex: 4;
@@ -79,25 +80,25 @@
   flex-direction: row;
   justify-content: center;
   align-self: center;
+}
 
-  .survey__questionAnswerInputs {
-    display: flex;
-    align-self: center;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-  }
+.survey__questionAnswerInputs {
+  display: flex;
+  align-self: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
 
-  .survey__questionAnswerInput {
-    text-align: center;
-    font-size: 1.5rem;
-    transition: all 0.1s linear;
-  }
+.survey__questionAnswerInput {
+  text-align: center;
+  font-size: 1.5rem;
+  transition: all 0.1s linear;
+}
 
-  .survey__questionAnswerUnit {
-    width: 0;
-    align-self: center;
-  }
+.survey__questionAnswerUnit {
+  width: 0;
+  align-self: center;
 }
 
 /*
@@ -150,20 +151,20 @@
     line-height: 1.1;
     font-size: 2rem;
     opacity: 0.75;
+
+    &:nth-child(-n+3), &:nth-last-child(-n+3) {
+      opacity: 0.5;
+    }
+
+    &:first-child, &:last-child {
+      opacity: 0.25;
+    }
   }
 
   .survey__questionAnswerInput--selected {
     font-size: 2.25rem;
     font-weight: bold;
     opacity: 1;
-  }
-
-  .survey__questionAnswerInput:first-child, .survey__questionAnswerInput:last-child  {
-    opacity: 0.25;
-  }
-
-  .survey__questionAnswerInput:nth-child(2), .survey__questionAnswerInput:nth-child(3), .survey__questionAnswerInput:nth-last-child(2),  .survey__questionAnswerInput:nth-last-child(3) {
-    opacity: 0.5;
   }
 
   .survey__questionAnswerUnit {
