[survey:tpl] Add new intro

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -1,10 +1,13 @@
 <section class='survey'>
   <section class='survey__introduction'>
     <h2 class='survey__introductionTitle'>Dites nous en un peu plus à votre sujet</h2>
+    <hr class='survey__introductionSeparation'>
     <p class='survey__introductionDescription'>
-      En répondant aux quelques questions de ce questionnaire, nous serons capable d'avoir une idée plus précise sur vos attentes.
-      Ainsi nous pourrons vous proposez le meilleur pour vous aider à vous améliorer.
+      Préparez-vous à devenir meilleur
     </p>
+    <button class='survey__introductionCTA'>
+      C'est partis !
+    </button>
   </section>
 
   <article class='survey__question survey__question--age'>
