--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -5,30 +5,45 @@
   justify-content: center;
   align-items: center;
   background-color: white;
-  font-family: "Lato", Arial, sans-serif;
+  font-family: "Source sans pro", Arial, sans-serif;
   font-size: 16px;
 }
 
 .survey__introduction {
-  width: 95%;
+  width: 75%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  text-align: center;
 }
 
 .survey__introductionTitle {
-  font-family: "Helvetica", sans-serif;
-  font-size: 24px;
+  font-family: "Helvetica neue", sans-serif;
+  font-size: 36px;
   font-weight: bold;
+  line-height: 1.25;
+}
+
+.survey__introductionSeparation {
+  width:25%;
+  margin: 20px 0;
+  border: 3px solid black;
 }
 
 .survey__introductionDescription {
   margin: 10px 0;
-  font-size: 1rem;
+  font-size: 24px;
 }
-
+.survey__introductionCTA {
+  width:200px;
+  height:50px;
+  margin-top:20px;
+  border-radius:50px;
+  background-color: black;
+  color:white;
+}
 .survey__question {
   height:100vh;
   width:95%;
