--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -7,6 +7,8 @@
   background-color: white;
   font-family: "Source sans pro", Arial, sans-serif;
   font-size: 16px;
+  background-color: #FACD1D;
+  color:white;
 }
 
 .survey__introduction {
@@ -27,7 +29,7 @@
 }
 
 .survey__introductionSeparation {
-  width:25%;
+  width: 25%;
   margin: 20px 0;
   border: 3px solid black;
 }
@@ -37,15 +39,15 @@
   font-size: 24px;
 }
 .survey__introductionCTA {
-  width:200px;
-  height:50px;
-  margin-top:20px;
-  border-radius:50px;
+  width: 200px;
+  height: 50px;
+  margin-top: 20px;
+  border-radius: 50px;
   background-color: black;
-  color:white;
+  color: white;
 }
 .survey__question {
-  height:100vh;
+  height: 100vh;
   width:95%;
   display: flex;
   flex-direction: column;
@@ -55,7 +57,7 @@
 }
 
 .survey__questionTitle {
-  flex:1;
+  flex: 1;
   display: flex;
   align-items: center;
   font-family: "Helvetica", sans-serif;
@@ -66,7 +68,7 @@
     width:30px;
     content: '';
     margin-right: 10px;
-    border: 2px solid #50e3c2;
+    border: 2px solid $accentColor;
   }
 }
 
@@ -77,7 +79,7 @@
   align-self: center;
   position: relative;
   bottom: -3vh;
-  background-color: #50e3c2;
+  background-color: $accentColor;
   border-radius: 50%;
   color: white;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -156,7 +158,7 @@
     hr {
       width: 60px;
       margin-left: auto;
-      border: 2px solid #50e3c2;
+      border: 2px solid $accentColor;
     }
   }
   .survey__questionAnswerInputs {
@@ -223,7 +225,7 @@
 
   .survey__questionAnswerInput--selected {
     height: 90%;
-    background-color: #50e3c2;
+    background-color: $accentColor;
   }
 
   .survey__questionAnswerUnit {
