--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -46,4 +46,21 @@
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
+
+  <article class='survey__question survey__question--profile'>
+    <h2 class='survey__questionTitle'>Quel type de sportif êtes-vous ?</h2>
+    <section class='survey__questionAnswer'>
+        <ul class='survey__questionAnswerInputs'>
+          <li class='survey__questionAnswerInput'>Athlète</li>
+          <li class='survey__questionAnswerInput'>Avancée</li>
+          <li class='survey__questionAnswerInput survey__questionAnswerInput--selected'>Régulier</li>
+          <li class='survey__questionAnswerInput'>Débutant</li>
+          <li class='survey__questionAnswerInput'>Pas sportif :(</li>
+        </ul>
+      </div>
+    </section>
+    <button class='survey__questionValidation'>
+      <i class="material-icons survey__questionValidationIcon">done</i>
+    </button>
+  </article>
 </section>
