--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -251,27 +251,42 @@
 .survey__question--profile {
 
   .survey__questionAnswerInputs {
+    width:100%;
+    display: flex;
     align-items: center;
+    justify-content: center;
     cursor: default;
   }
 
   .survey__questionAnswerInput {
-    font-size:24px;
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
+    font-size: 30px;
     line-height: 2;
+    white-space: nowrap;
+    transition: all ease 0.2s;
+
+    &:before, &:after {
+      width: 0px;
+      height: 2px;
+      visibility: hidden;
+      margin: 10px;
+      white-space: nowrap;
+      border: 2px solid $accentColor;
+      transition: all ease-in 0.3s;
+      content: '';
+    }
   }
 
   .survey__questionAnswerInput--selected {
-    display: flex;
-    align-items: center;
-    font-size:36px;
-    cursor: pointer;
+    font-size:40px;
 
-    &::before, &::after {
-      width:30px;
-      margin:0 10px;
-      height: 2px;
-      content: '';
+    &:before, &:after {
+      width:100px;
+      visibility: visible;
       border: 2px solid $accentColor;
     }
   }
