[survey:tpl] Add new smoke profile question

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -50,12 +50,26 @@
   <article class='survey__question survey__question--profile'>
     <h2 class='survey__questionTitle'>Quel type de sportif êtes-vous ?</h2>
     <section class='survey__questionAnswer'>
-        <ul class='survey__questionAnswerInputs'>
+        <ul class='survey__questionAnswerInputs survey__questionAnswerInputs--sport'>
           <li class='survey__questionAnswerInput'>Athlète</li>
           <li class='survey__questionAnswerInput'>Avancée</li>
           <li class='survey__questionAnswerInput survey__questionAnswerInput--selected'>Régulier</li>
           <li class='survey__questionAnswerInput'>Débutant</li>
           <li class='survey__questionAnswerInput'>Pas sportif :(</li>
+        </ul>
+      </div>
+    </section>
+    <button class='survey__questionValidation'>
+      <i class="material-icons survey__questionValidationIcon">done</i>
+    </button>
+  </article>
+
+  <article class='survey__question survey__question--profile'>
+    <h2 class='survey__questionTitle'>Encore un petit effort ; Dernière question : êtes vous fumeur ?</h2>
+    <section class='survey__questionAnswer'>
+        <ul class='survey__questionAnswerInputs survey__questionAnswerInputs--smoke'>
+          <li class='survey__questionAnswerInput survey__questionAnswerInput--selected'>Non</li>
+          <li class='survey__questionAnswerInput'>Oui</li>
         </ul>
       </div>
     </section>
