[nav:tpl] Add ejs for nav

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -10,4 +10,19 @@
     </head>
     <body>
         <header>
+          <nav class='nav__container'>
+            <div class='nav__toggle'>
+              <div class="nav__toggleIcon">
+                <div class="bar top"></div>
+                <div class="bar middle"></div>
+                <div class="bar bottom"></div>
+              </div>
+            </div>
+            <ul class='nav'>
+              <li class='nav__item'><a class='nav__itemLink' href='#'>Home</a></li>
+              <li class='nav__item'><a class='nav__itemLink' href='#'>Produit</a></li>
+              <li class='nav__item'><a class='nav__itemLink' href='#'>Actualités</a></li>
+              <li class='nav__item'><a class='nav__itemLink' href='#'>FAQ</a></li>
+            </ul>
+          </nav>
         </header>
