[nav:tpl] Add class on active link

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -19,10 +19,11 @@
               </div>
             </div>
             <ul class='nav'>
-              <li class='nav__item'><a class='nav__itemLink' href='#'>Home</a></li>
-              <li class='nav__item'><a class='nav__itemLink' href='#'>Produit</a></li>
+              <li class='nav__item'><a class='nav__itemLink <%= page === 'survey' ? 'nav__itemLink--active' : '' %>' href='#'>Technologie</a></li>
+              <li class='nav__item'><a class='nav__itemLink' href='#'>Puce</a></li>
               <li class='nav__item'><a class='nav__itemLink' href='#'>Actualités</a></li>
               <li class='nav__item'><a class='nav__itemLink' href='#'>FAQ</a></li>
+              <li class='nav__item'><a class='nav__itemLink' href='#'>Se tester</a></li>
             </ul>
           </nav>
         </header>
