[survey:sass] Update colors

--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -7,8 +7,8 @@
   background-color: white;
   font-family: "Source sans pro", Arial, sans-serif;
   font-size: 16px;
-  background-color: #FACD1D;
-  color:white;
+  background-color: white;
+  color:black;
 }
 
 .survey__introduction {
