[survey:tpl] Fix typing error

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -6,7 +6,7 @@
       Préparez-vous à devenir meilleur
     </p>
     <button class='survey__introductionCTA'>
-      C'est partis !
+      C'est parti !
     </button>
   </section>
 
