[product:tpl] Add first part

--- a/app/views/pages/product.ejs
+++ b/app/views/pages/product.ejs
@@ -1,1 +1,25 @@
-<h1>hello world !</h1>
+<section class="product">
+	<section class="product__introduction">
+	<h2 class="product__introductionTitle">
+		<span class="accentColor">+</span>Spuce C8
+		<hr class="product__introductionDecorline">
+	</h2>
+	<div class="product__introductionSlider">
+		<img src="img/puce-improve--slider01.png">
+	</div>
+	</section>
+
+	<section class="product__description">
+		<h2 class="product__descriptionTitle">Descriptif</h2>
+		<p class="product__descriptionText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam massa nibh, eleifend ut lacinia id, fringilla nec velit. Vestibulum nunc ligula, tincidunt sit amet volutpat sit amet, condimentum congue urna. Sed fermentum iaculis tortor, aliquam rhoncus leo dignissim non.
+		</p>
+		<h2 class="product__descriptionTitle">Quantité</h2>
+		<div class="product__buttonQuantity first-button">-</div>
+		<p class="product__quantity">1</p>
+		<div class="product__buttonQuantity">+</div>
+		<h2 class="product__descriptionTitle">Prix</h2>
+		<p class="product__price">999 €</p>
+		<button class="product__register">S'inscrire</button>
+	</section>
+
+</section>
