--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -5,35 +5,35 @@
     <p class='survey__introductionDescription'>
       Préparez-vous à devenir meilleur
     </p>
-    <button class='survey__introductionCTA'>
+    <button data-next='1' class='survey__introductionCTA'>
       C'est parti !
     </button>
   </section>
 
-  <article class='survey__question survey__question--age'>
+  <article data-question='1' class='survey__question survey__question--age'>
     <h2 class='survey__questionTitle'>Commençons par une question simple, quel est votre âge ?</h2>
     <section class='survey__questionAnswer'>
       <div class='survey__questionAnswerInputs'></div>
       <div class='survey__questionAnswerUnit'>ans</div>
     </section>
-    <button class='survey__questionValidation'>
+    <button data-next='2' class='survey__questionValidation'>
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
 
-  <article class='survey__question survey__question--height'>
+  <article  data-question='2' class='survey__question survey__question--height'>
     <h2 class='survey__questionTitle'>Quel est votre taille ?</h2>
     <section class='survey__questionAnswer'>
       <div class='survey__questionAnswerPointer'><hr></div>
       <div class='survey__questionAnswerInputs'></div>
       <div class='survey__questionAnswerUnit'>cm</div>
     </section>
-    <button class='survey__questionValidation'>
+    <button data-next='3' class='survey__questionValidation'>
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
 
-  <article class='survey__question survey__question--weight'>
+  <article  data-question='3' class='survey__question survey__question--weight'>
     <h2 class='survey__questionTitle'>Quel est votre poids ?</h2>
     <section class='survey__questionAnswer'>
       <div class='survey__questionAnswerDisplay'>
@@ -42,12 +42,12 @@
       </div>
       <div class='survey__questionAnswerInputs'></div>
     </section>
-    <button class='survey__questionValidation'>
+    <button data-next='4' class='survey__questionValidation'>
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
 
-  <article class='survey__question survey__question--profile'>
+  <article  data-question='4' class='survey__question survey__question--profile'>
     <h2 class='survey__questionTitle'>Quel type de sportif êtes-vous ?</h2>
     <section class='survey__questionAnswer'>
         <ul class='survey__questionAnswerInputs survey__questionAnswerInputs--sport'>
@@ -59,12 +59,12 @@
         </ul>
       </div>
     </section>
-    <button class='survey__questionValidation'>
+    <button data-next='5' class='survey__questionValidation'>
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
 
-  <article class='survey__question survey__question--profile'>
+  <article data-question='5' class='survey__question survey__question--profile'>
     <h2 class='survey__questionTitle'>Encore un petit effort ; Dernière question : êtes vous fumeur ?</h2>
     <section class='survey__questionAnswer'>
         <ul class='survey__questionAnswerInputs survey__questionAnswerInputs--smoke'>
@@ -73,7 +73,7 @@
         </ul>
       </div>
     </section>
-    <button class='survey__questionValidation'>
+    <button data-next='6' class='survey__questionValidation'>
       <i class="material-icons survey__questionValidationIcon">done</i>
     </button>
   </article>
