--- a/public/scss/survey.scss
+++ b/public/scss/survey.scss
@@ -12,6 +12,7 @@
   background-color: white;
   color:black;
   position: relative;
+
 }
 
 .survey__introduction {
@@ -42,7 +43,7 @@
 .survey__introductionSeparation {
   width: 25%;
   margin: 20px 0;
-  border: 3px solid black;
+  border: 1px solid $surveyAccentColor;
 }
 
 .survey__introductionDescription {
@@ -61,11 +62,10 @@
   height: 100vh;
   width:95%;
   position: absolute;
-  top:0vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   overflow: hidden;
   opacity: 0;
   transform: translateY(100vh);
@@ -84,35 +84,107 @@
   &:nth-child(4) {
     cursor: e-resize;
   }
+
+  @include desktop {
+    justify-content: flex-start;
+  }
+}
+
+.survey__wizard {
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Helvetica neue", Arial, sans-serif;
+  font-size: 24px;
+  margin-top: 5vh;
+  margin-bottom:5vh;
+
+  @include desktop {
+    margin-top: 8vh;
+  }
+}
+
+.survey__wizardCurrent {
+  font-weight: bold;
+}
+
+.survey__wizardSep {
+  border: 1px solid $surveyAccentColor;
+  width:10px;
+  margin: 7px 0;
+}
+
+.survey__wizardAll {
+  opacity: 0.58;
 }
 
 .survey__questionTitle {
   flex: 1;
   display: flex;
   align-items: center;
-  font-family: "Helvetica", sans-serif;
-  font-size: 24px;
+  font-family: "Helvetica", Arial, sans-serif;
+  font-size: 36px;
   font-weight: bold;
+  text-align: center;
 
-  &::before {
-    width:30px;
-    content: '';
-    margin-right: 10px;
-    border: 2px solid $accentColor;
+  @include desktop {
+    flex:initial;
+    margin-bottom: 10vh;
+    font-size:48px;
   }
 }
 
 
 .survey__questionValidation {
-  height: 19vh;
-  width: 19vh;
+  height: 125px;
+  width: 125px;
+  border-radius: 50%;
   align-self: center;
   position: relative;
-  bottom: -3vh;
-  background-color: $accentColor;
-  border-radius: 50%;
-  color: white;
+  bottom: -4vh;
+  font-family: "Helvetica", Arial, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
+  @include desktop {
+    height: auto;
+    width: auto;
+    box-shadow: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex:initial;
+    position: absolute;
+    bottom:10vh;
+    transition: all ease 0.3s;
+    cursor: pointer;
+    font-size: 36px;
+
+    &:before {
+      content:'';
+      width: 100%;
+      height: 0%;
+      position: absolute;
+      left:0;
+      top: -10px;
+      right: 0;
+      bottom: 0;
+      z-index: -1;
+      background-color: black;
+      transition: all ease-out 0.3s;
+    }
+
+    &:hover::before{
+      height: calc(100% + 20px);
+    }
+
+    &:hover {
+      color:white;
+    }
+  }
 }
 
 .survey__questionValidationIcon {
@@ -128,6 +200,10 @@
   flex-direction: row;
   justify-content: center;
   align-self: center;
+
+  @include desktop {
+    flex:initial;
+  }
 }
 
 .survey__questionAnswerInputs {
@@ -137,6 +213,10 @@
   justify-content: flex-end;
   align-items: flex-end;
   user-select: none;
+
+  @include desktop {
+    align-self: flex-start;
+  }
 }
 
 .survey__questionAnswerInput {
@@ -150,6 +230,10 @@
   width: 0;
   align-self: center;
   user-select: none;
+
+  @include desktop {
+    align-self: center;
+  }
 }
 
 /*
@@ -159,17 +243,29 @@
   .survey__questionAnswerInput {
     font-size: 36px;
     opacity: 0.75;
+
+    @include desktop {
+      font-size: 60px;
+    }
   }
 
   .survey__questionAnswerInput--selected {
     font-size: 48px;
     font-weight: bold;
     opacity: 1;
+
+    @include desktop {
+      font-size: 72px;
+    }
   }
 
   .survey__questionAnswerInput:first-child, .survey__questionAnswerInput:last-child  {
     font-size: 24px;
     opacity: 0.5;
+
+    @include desktop {
+      font-size: 36px;
+    }
   }
 
   .survey__questionAnswerUnit {
@@ -189,10 +285,15 @@
     flex: 1;
     align-self: center;
     transform: translateX(-20px);
+
     hr {
       width: 60px;
       margin-left: auto;
-      border: 2px solid $accentColor;
+      border: 2px solid $surveyAccentColor;
+
+      @include desktop {
+        border-width: 5px;
+      }
     }
   }
   .survey__questionAnswerInputs {
@@ -202,6 +303,10 @@
     line-height: 1.1;
     font-size: 24px;
     opacity: 0.75;
+
+    @include desktop {
+      font-size: 30px;
+    }
 
     &:nth-child(-n+3), &:nth-last-child(-n+3) {
       opacity: 0.5;
@@ -213,15 +318,19 @@
   }
 
   .survey__questionAnswerInput--selected {
-    font-size: 36px;
+    font-size: 30px;
     font-weight: bold;
     opacity: 1;
+
+    @include desktop {
+      font-size: 36px;
+    }
   }
 
   .survey__questionAnswerUnit {
     flex: 1;
     margin-left: 1rem;
-    font-size: 2rem;
+    font-size: 30px;
     font-weight: bold;
   }
 }
@@ -243,11 +352,21 @@
     align-items: flex-end;
     font-size: 36px;
     font-weight: bold;
+
+    @include desktop {
+      flex:initial;
+      font-size: 48px;
+    }
   }
   .survey__questionAnswerInputs {
     flex: 2;
     flex-direction: row;
     align-items: center;
+
+    @include desktop {
+      height: 300px;
+      align-self: center;
+    }
   }
 
   .survey__questionAnswerInput {
@@ -255,11 +374,12 @@
     height: 50%;
     margin: 0 5px;
     background-color: black;
+
   }
 
   .survey__questionAnswerInput--selected {
     height: 90%;
-    background-color: $accentColor;
+    background-color: $surveyAccentColor;
   }
 
   .survey__questionAnswerUnit {
@@ -271,7 +391,7 @@
 }
 
 /*
-  ********************************* QUESTION WEIGHT
+  ********************************* QUESTION PROFILE
 **/
 
 .survey__question--profile {
@@ -290,10 +410,14 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    font-size: 30px;
-    line-height: 2;
+    font-size: 24px;
+    line-height: 1.8;
     white-space: nowrap;
     transition: all ease 0.2s;
+
+    @include desktop {
+      font-size:30px;
+    }
 
     &:before, &:after {
       width: 0px;
@@ -301,19 +425,28 @@
       visibility: hidden;
       margin: 10px;
       white-space: nowrap;
-      border: 2px solid $accentColor;
+      border: 2px solid $surveyAccentColor;
       transition: all ease-in 0.3s;
       content: '';
+
+      @include desktop {
+        height: 4px;
+        border: 4px solid $surveyAccentColor;
+      }
     }
   }
 
   .survey__questionAnswerInput--selected {
-    font-size:40px;
+    font-size: 36px;
+
+    @include desktop {
+      font-size:42px;
+    }
 
     &:before, &:after {
-      width:100px;
+      width: 100px;
       visibility: visible;
-      border: 2px solid $accentColor;
+      border: 2px solid $surveyAccentColor;
     }
   }
 
