[global:sass] Change folder organisation

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -4,5 +4,6 @@
 @import 'reset';
 @import 'icons';
 @import 'fonts';
-@import 'nav';
-@import 'survey';
+@import 'partials/nav';
+@import 'page/survey';
+@import 'page/home';
