--- a/public/scss/page/home/plusicon.scss
+++ b/public/scss/page/home/plusicon.scss
@@ -12,7 +12,8 @@
     width: 4px;
     height: 100%;
     margin-left: -2px;
-    background-color: black;
+    background-color: white;
+    transition: transform 0.3s ease-out;
   }
 
   &__verticalBar {
@@ -22,7 +23,8 @@
     width: 100%;
     height: 4px;
     margin-top: -2px;
-    background-color: black;
+    background-color: white;
+    transition: transform 0.3s ease-out;
   }
 
   &:hover{
